# COBRA

./: .gitignore  README.md  config.yaml  config.yml  data_loading.py  evaluate.py  go.sum  mcd_evaluate.py  mcd_train.py  plotting.py  pyproject.toml  sample_config.yml  slurm_job.sh  train.py
.github/workflows/: pages.yml
assets/sass/: _custom.scss
content/: cobra.md  code.md  idea.md  map.md  paper.md  results.md  visualization.md
inference_map/: index.html  main.js  package.json  style.css  vite.config.js
inference_map/geojson/: CALFIN.geo.json
inference_map/res/: glacier_names.kml
inference_results/: README.md
inference_results/geojson/: Baumhoer.geo.json  TUD.geo.json
inference_results/shapefiles/: Baumhoer.dbf  Baumhoer.shp  Baumhoer.shx  CALFIN.dbf  CALFIN.shp  CALFIN.shx  TUD.dbf  TUD.shp  TUD.shx
lib/: __init__.py  jump_flood.py  logging.py  losses.py  metrics.py  utils.py
lib/models/: __init__.py  cobra.py  dance.py  nnutils.py  snake_utils.py  unet.py
lib/models/backbones/: __init__.py  resnet.py  simple.py
models/: __init__.py  calfin.py  cobra.py  contour_transformer.py  dance.py  deepsnake.py  hed_unet.py  marcos_dsac.py  nnutils.py  random_deepsnake.py  rupprecht_dac.py  snake_utils.py  unet.py  vanilla_deepsnake.py
models/backbones/: __init__.py  calfin_xception.py  convnext.py  nextception.py  simple.py  xception.py
static/: index-5bb9e01e.js  map-5bb9e01e.js  map-5bb9e01e.js.map  map.css  map.html  map.js
static/anim/: .directory  11.html  18.html  25.html  32.html  6.html  8.html
themes/osprey-delight/exampleSite/: go.mod  (+1 more)
(+11 files in other folders)
